[tool.poetry]
name = "lsf_stats"
version = "0.1.0"
description = "Summarize LSF job properties by parsing log files."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/lsf_stats"

[tool.poetry.dependencies]
python = "^3.8.0"
click = "^8.0.1"
pyskim = "0.1.3"
pandas = "^1.2.4"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
humanize = "^3.9.0"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^21.6b0"
pytest = "^6.2.1"
pytest-markdown = "^1.0.2"

[tool.poetry.scripts]
lsf_stats = "lsf_stats:cli"

[tool.black]
skip_string_normalization = true
